--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -7,24 +7,27 @@ footer{
 
 @media (max-width: 767px) {
     footer {
-        font-size: 16px;
+        position: relative;
+        font-size: 12px;
         font-style: italic;
         font-weight: bold;
-        padding: 10px 0;
     }
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
     footer {
+        height: auto;
+        position: relative;
         font-size: 16px;
         font-style: italic;
         font-weight: bold;
-        padding: 10px 0;
     }
 }
 
 @media (min-width: 992px) and (max-width: 1199px) {
     footer {
+        height: auto;
+        position: relative;
         font-size: 18px;
         font-style: italic;
         font-weight: bold;
