--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,8 +1,16 @@
 footer{
     width: 100%;
-    height: 60px;
     background-color: #D9D9D9;
     text-align: center;
+}
+
+.reposito{
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+}
+
+.reposito:visited{
+    color: black;
 }
 
 @media (max-width: 767px) {
@@ -31,8 +39,7 @@ footer{
         position: relative;
         font-size: 18px;
         font-style: italic;
-        font-weight: bold;
-        padding: 15px 0;
+        font-weight: bold;    
     }
 }
 
