--- a/src/components/RelatorioDiagnoscar/RelatorioDiagnoscar.css
+++ b/src/components/RelatorioDiagnoscar/RelatorioDiagnoscar.css
@@ -61,7 +61,7 @@
         margin: 8px 0;
     }
 
-    .butao {
+    .botao {
         width: 100%;
         height: 50px;
         border-radius: 20px;
@@ -75,7 +75,7 @@
         display: block;
     }
 
-    .butao:hover {
+    .botao:hover {
         background: #0077B6;
     }
 
@@ -100,7 +100,7 @@
         margin: 9px 0;
     }
 
-    .butao {
+    .botao {
         width: 100%;
         height: 55px;
         border-radius: 22px;
@@ -114,7 +114,7 @@
         display: block;
     }
 
-    .butao:hover {
+    .botao:hover {
         background: #0077B6;
     }
 
@@ -140,7 +140,7 @@
         margin: 10px 0;
     }
 
-    .butao {
+    .botao {
         width: 100%;
         height: 60px;
         border-radius: 25px;
@@ -154,7 +154,7 @@
         display: block;
     }
 
-    .butao:hover {
+    .botao:hover {
         background: #0077B6;
     }
 
@@ -172,15 +172,17 @@
     .pre-diagnostico {
         margin-bottom: 30px;
         height: 111px;
+                margin-left: 20px;
     }
 
     .informacoes p,
     .descricao p,
     .pre-diagnostico p {
         margin: 10px 0;
+
     }
 
-    .butao {
+    .botao {
         width: 100%;
         height: 60px;
         border-radius: 25px;
@@ -194,7 +196,7 @@
         display: block;
     }
 
-    .butao:hover {
+    .botao:hover {
         background: #0077B6;
     }
     
