--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,20 +1,20 @@
-footer{
+.footer {
     width: 100%;
     background-color: #D9D9D9;
     text-align: center;
 }
 
-.reposito{
+.reposito {
     color: rgb(0, 0, 0);
     text-decoration: none;
 }
 
-.reposito:visited{
+.reposito:visited {
     color: black;
 }
 
 @media (max-width: 767px) {
-    footer {
+    .footer {
         height: auto;
         position: relative;
         font-size: 12px;
@@ -24,7 +24,7 @@ footer{
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
-    footer {
+    .footer {
         height: auto;
         position: relative;
         font-size: 16px;
@@ -34,17 +34,17 @@ footer{
 }
 
 @media (min-width: 992px) and (max-width: 1199px) {
-    footer {
+    .footer {
         height: auto;
         position: relative;
         font-size: 18px;
         font-style: italic;
-        font-weight: bold;    
+        font-weight: bold;
     }
 }
 
 @media (min-width: 1200px) {
-    footer {
+    .footer {
         height: auto;
         position: relative;
         font-size: 20px;
