--- a/src/components/PaginaDeMembros/Membros.module.css
+++ b/src/components/PaginaDeMembros/Membros.module.css
@@ -1,84 +1,95 @@
-.membros-container {
-display: flex;
-flex-wrap: wrap;
-justify-content: center;
-gap: 40px;
-padding: 20px;
+.membrosContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 40px;
+    padding: 20px;
 }
 
 .membro {
-display: flex;
-flex-direction: column;
-align-items: center;
-text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 
 .membro img {
-width: 100%;
-max-width: 299px;
-height: auto;
-object-fit: cover;
-aspect-ratio: 299 / 530;
-border-radius: 10px;
-box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 299px;
+    height: auto;
+    object-fit: cover;
+    aspect-ratio: 299 / 530;
+    border-radius: 10px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .membro h1 {
-margin-top: 10px;
-font-size: 20px;
-color: #333;
+    margin-top: 10px;
+    font-size: 20px;
+    color: #333;
 }
 
 @media (max-width: 767px) {
-    .membros-container {
-        margin-top: 50px;
-        margin-bottom: 50px;
+    .membrosContainer {
+        margin-top: 100px;
+        margin-bottom: 200px;
         flex-direction: column;
         gap: 20px;
     }
+
     .membro img {
         margin-top: 20px;
         margin-bottom: 20px;
-        max-width: 60%; 
+        max-width: 60%;
     }
+
     .membro h1 {
         font-size: 30px;
+        margin-bottom: 70px;
     }
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
-    .membros-container {
+    .membrosContainer {
         flex-direction: row;
         justify-content: space-between;
     }
+
     .membro {
         flex-basis: 40%;
     }
+
     .membro img {
         max-width: 200px;
     }
 }
 
 @media (min-width: 992px) and (max-width: 1199px) {
-    .membros-container {
+    .membrosContainer {
         justify-content: space-around;
+        margin-bottom: 23px;
     }
+
     .membro {
         flex-basis: 30%;
     }
+
     .membro img {
         max-width: 250px;
     }
 }
 
 @media (min-width: 1200px) {
-    .membros-container {
+    .membrosContainer {
         justify-content: space-evenly;
     }
+
     .membro {
         flex-basis: 20%;
     }
+
     .membro img {
         max-width: 299px;
+
     }
 }
